fixed textarea color on mobile

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ textarea, input {
 textarea:focus, input:focus {
     background-color: var(--color-bunnywhite);
     color: black;
+    -webkit-text-fill-color: black;
     box-shadow: inset 0 0 0 1px transparent;
     outline: 2px dotted var(--color-bunnywhite);
 }
@@ -1061,13 +1062,14 @@ canvas:hover h1 {
         display: none;
     }
     textarea,input {
+    	-webkit-text-fill-color: var(--color-bunnywhite);
         width: 100%;
         outline-width: 2px;
         border-radius: 0px;
         float: clear;
         margin: 0;
         margin-top: 10px;
-        box-shadow: inset 0 0 0 1px #485567;
+        box-shadow: inset 0 0 0 1px var(--color-bunnywhite);
     }
     #widget, #resume-dropdown {
         border-radius: 40px;
